# archive_reader

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  archive_reader.py  archiver.css  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/archive_reader/: __main__.py  app.py  archiver.css  core.py  debug.py  hyperkitty.py  models.py  schemas.py  screens.py  storage.py  widgets.py
