[project]
name = "archive_reader"
version = "0.1.0"
description = "Terminal based archives reader for Hyperkitty, GNU Mailman's archiver"
authors = [
    {name = "Abhilash Raj", email = "raj.abhilash1@gmail.com"},
]
dependencies = [
    "textual",
    "httpx",
    "marshmallow",
    "timeago",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dependencies = [
    "textual-dev",
]

[tool.pdm.scripts]
start = {call = "archive_reader.app:main"}